# defindex

./: .gitbook.yaml  .gitignore  DeFindex.code-workspace  README.md  defindex.sln  defindex_terms_of_service.md  docker-compose.yml  package.json  run.sh  run_workflow.sh  scf-tracker.md
apps/contracts/: .env.example  .eslintrc.js  .gitignore  Cargo.toml  Makefile  README.md  configs.json  package.json  tsconfig.json
apps/contracts/adapters/: Makefile
apps/contracts/adapters/blend/: Cargo.toml  Makefile
apps/contracts/adapters/blend/src/: blend_pool.rs  lib.rs  storage.rs
apps/contracts/adapters/interface/: Cargo.toml
apps/contracts/adapters/interface/src/: error.rs  lib.rs
apps/contracts/adapters/soroswap/src/: lib.rs
apps/contracts/adapters/xycloans/: Cargo.toml  test.sh
apps/contracts/adapters/xycloans/src/: lib.rs  soroswap_router.rs  storage.rs  test.rs
apps/contracts/adapters/xycloans/src/test/: balance.rs  deposit.rs  initialize.rs  withdraw.rs
apps/contracts/bash/: deploy-blend-strategy.sh
apps/contracts/common/: Cargo.toml
apps/contracts/common/src/: lib.rs  models.rs  utils.rs
apps/contracts/defindex/: Cargo.toml  Makefile
apps/contracts/defindex/src/: access.rs  aggregator.rs  constants.rs  error.rs  events.rs  fee.rs  funds.rs  interface.rs  investment.rs  lib.rs  models.rs  storage.rs  strategies.rs  test.rs  utils.rs
apps/contracts/defindex/src/test/: admin.rs  deposit.rs  emergency_withdraw.rs  initialize.rs  rebalance.rs  withdraw.rs
apps/contracts/defindex/src/token/: allowance.rs  balance.rs  contract.rs  mod.rs  total_supply.rs
apps/contracts/factory/: Cargo.toml  Makefile
apps/contracts/factory/src/: constants.rs  defindex.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs  vault.rs
apps/contracts/factory/src/test/: admin.rs  all_flow.rs  create_defindex.rs  initialize.rs
apps/contracts/factory/src/test/factory/: admin.rs  budget.rs  create_defindex.rs  events.rs  initialize.rs  mod.rs
apps/contracts/integration-test/: Cargo.toml  Makefile
apps/contracts/integration-test/src/: blend_strategy.rs  factory.rs  fixed_strategy.rs  hodl_strategy.rs  lib.rs  setup.rs  test.rs  token.rs  vault.rs
apps/contracts/integration-test/src/setup/: blend_setup.rs  soroswap_setup.rs
apps/contracts/integration-test/src/test/limits/: asset_n_strategies.rs  mod.rs  n_asset_one_strategy.rs  rebalance.rs
apps/contracts/integration-test/src/test/test_vault_one_fixed_strategy/: mod.rs  test_deposit.rs  test_withdraw.rs
apps/contracts/integration-test/src/test/test_vault_one_hodl_strategy/: mod.rs  test_deposit.rs  test_invest.rs  test_withdraw.rs
apps/contracts/public/: mainnet.contracts.json  testnet.contracts.json
apps/contracts/soroswap/: soroswap_aggregator.wasm
apps/contracts/src/: constants.ts  count-lines.ts  create_accounts.ts  deploy.ts  deploy_adapter.ts  deploy_blend_vault.ts  deploy_factory.ts  deploy_hodl.ts  deploy_vault.ts  publish_addresses.ts  test.ts  test_contracts.js  test_toolkit.ts  vault_usage_example.ts
apps/contracts/src/strategies/: blend_deploy_config.json  deploy_blend.ts  deploy_fixed.ts  deploy_fixed_usdc.ts  deploy_fixed_xtar.ts  deploy_hodl.ts  deploy_hodl_usdc.ts  deploy_strategies.ts  harvest_blend.ts  multi_deploy_blend.ts
apps/contracts/src/tests/: common.ts  dev.ts  mainTest.ts  rebalanceTest.ts  strategy.ts  testOnlyVault.ts  testTwoStrategiesVault.ts  types.ts  vault.ts
apps/contracts/src/tests/blend/: dev.ts  test.ts  test_deployed_vault.ts  test_strategy.ts  test_vault.ts
apps/contracts/src/tests/vault/: access_control.ts  one_aset_two_strategies.ts  one_asset_one_strategy.ts  one_strategy.ts  two_assets_one_strategy.ts  two_assets_two_strategies.ts  upgrade_contract.ts  utils.ts
apps/contracts/src/tests/xycloans/: deploy.sh
apps/contracts/src/utils/: address_book.ts  contract.ts  deploy_tools.ts  env_config.ts  tokens_book.ts  tx.ts  vault.ts
apps/contracts/strategies/: Makefile
apps/contracts/strategies/base/: Cargo.toml  Makefile
apps/contracts/strategies/base/src/: balance.rs  lib.rs  storage.rs  test.rs
apps/contracts/strategies/blend/: Cargo.toml  Makefile  Readme.md
apps/contracts/strategies/blend/src/: blend_pool.rs  constants.rs  lib.rs  positions.rs  reserves.rs  soroswap.rs  storage.rs  test.rs  utils.rs
apps/contracts/strategies/core/: Cargo.toml  README.md
apps/contracts/strategies/core/src/: error.rs  event.rs  lib.rs
apps/contracts/strategies/external_wasms/: token_contract.wasm
apps/contracts/strategies/external_wasms/blend/: README.md  backstop.wasm  blend_pool.wasm  pool.wasm  pool_factory.wasm
apps/contracts/strategies/fixed_apr/: Cargo.toml  Makefile
apps/contracts/strategies/fixed_apr/src/: balance.rs  lib.rs  storage.rs  test.rs  yield_balance.rs
apps/contracts/strategies/hodl/: Cargo.toml  Makefile
apps/contracts/strategies/hodl/src/: lib.rs  storage.rs  test.rs
apps/contracts/strategies/interface/: Cargo.toml
apps/contracts/strategies/interface/src/: error.rs  lib.rs
apps/contracts/strategies/soroswap/: Cargo.toml  Makefile
apps/contracts/strategies/soroswap/src/: lib.rs  soroswap_pair.rs  soroswap_router.rs  storage.rs
apps/contracts/strategies/unsafe_hodl/: Cargo.toml  Makefile
apps/contracts/strategies/unsafe_hodl/src/: balance.rs  lib.rs  storage.rs  test.rs
apps/contracts/strategies/xycloans/: Cargo.toml  Makefile
apps/contracts/strategies/xycloans/src/: lib.rs  soroswap_router.rs  storage.rs  xycloans_pool.rs
apps/contracts/vault/: Cargo.toml  Makefile
apps/contracts/vault/src/: access.rs  aggregator.rs  constants.rs  deposit.rs  error.rs  events.rs  fee.rs  funds.rs  interface.rs  investment.rs  lib.rs  models.rs  report.rs  router.rs  storage.rs  strategies.rs  test.rs  utils.rs
apps/contracts/vault/src/test/: admin.rs  deposit.rs  deposit_and_invest.rs  emergency_withdraw.rs  get_asset_amounts_per_shares.rs  initialize.rs  invest.rs  rebalance.rs  soroswap_setup.rs  swap.rs  withdraw.rs
apps/contracts/vault/src/token/: allowance.rs  balance.rs  contract.rs  mod.rs
public/: mainnet.contracts.json  (+2 more)
(+690 files in other folders)
