[workspace]
members = ["strategies/*", "defindex", "factory"]
exclude = [
    "strategies/external_wasms",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/paltalabs/defindex"

[workspace.dependencies]
soroban-sdk = "21.7.6"
soroban-token-sdk = { version = "21.0.1-preview.3" }
# soroswap-library = "0.3.0"
defindex-strategy-core={ path="./strategies/core", package="defindex-strategy-core" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
