[package]
name = "common"
version = { workspace = true }
authors = ["coderipper <joaquin@paltalabs.io>"]
license = { workspace = true }
edition = { workspace = true }
publish = false
repository = { workspace = true }

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }