[package]
name = "defindex"
version = { workspace = true }
authors = ["coderipper <joaquin@paltalabs.io>"]
license = { workspace = true }
edition = { workspace = true }
publish = false
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]
 
[dependencies] 
soroban-sdk = { workspace = true }
defindex-adapter-interface = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
