[package]
name = "integration-test"
authors = ["coderipper <joaquin@paltalabs.io>"]
publish = false
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/paltalabs/defindex"

[lib]
crate-type = ["cdylib"]
 
[dependencies] 
soroban-sdk = "21.0.1-preview.3"

[dev-dependencies]
soroban-sdk = { version= "21.0.1-preview.3", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
