
[package]
name = "integration-test"
version = "0.0.0"
authors = ["coderipper <joaquin@paltalabs.io>"]
edition = "2021"
publish = false

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
factory = { path = "../factory", package = "defindex-factory" }
vault = { path = "../vault", package = "defindex-vault"}
hodl-strategy={ path="../strategies/hodl", package="hodl_strategy"}
common = { workspace = true }