[package]
name = "mock-sep-41-token"
version = "0.4.0"
authors = ["Script3 <support@script3.io>"]
license = "MIT"
edition = "2021"
publish = false
rust-version = "1.79.0"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
sep-41-token = { path = "../sep-41" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
